part2/main-app/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-main-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-main-app
  template:
    metadata:
      labels:
        app: dwk-main-app
    spec:
      volumes:
        - name: dwk-volume
          persistentVolumeClaim:
            claimName: dwk-volume-claim
      containers:
        - name: dwk-main-app-generator
          image: smuliii/dwk-main-app-generator@sha256:b1f97188bf5261985d003d3276935c11194f3396554a9e959e1f66d610789004
          volumeMounts:
            - name: dwk-volume
              mountPath: /app/files
        - name: dwk-main-app-reader
          image: smuliii/dwk-main-app-reader@sha256:531c6880becce000b61efa6dbc7ba86ea7a51c936671bd7a6eb23e2b37fcc6c1
          volumeMounts:
            - name: dwk-volume
              mountPath: /app/files
